[package]
name = "llm-ping"
version = "0.1.0"
edition = "2024"
description = "LLM API latency diagnostic — measures DNS, TCP, TLS, TTFT, and throughput"
authors = ["Nan Huang <teddyhuangnan@gmail.com>"]
license = "MIT"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "string", "cargo", "color", "wrap_help"] }
hickory-resolver = "0.26"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5.2"
tabled = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
url = "2"
webpki-roots = "1"

[lints.clippy]
nursery = "warn"
